--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,3 +2,8 @@ rootProject.name = 'CongCafeApp'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+// include ':app', ':react-native-i18n'
+// project(':react-native-i18n').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-i18n/android')
+
+// include ':app', ':react-native-code-push'
+// project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
