--- a/package.json
+++ b/package.json
@@ -10,8 +10,47 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^18.9.0",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/firestore": "^18.7.3",
+    "@react-native-firebase/storage": "^18.9.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-native-i18n": "^2.0.2",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/underscore": "^1.11.15",
+    "firebase": "^10.7.1",
+    "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.5",
+    "react-native-date-picker": "^4.3.6",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-i18n": "^2.0.15",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.29.0",
+    "react-native-snackbar": "^2.6.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-url": "^0.0.2",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.6.4",
+    "react-redux": "^9.1.0",
+    "undercore": "^1.0.0",
+    "underscore": "^1.13.6",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
