--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@types/react-native-i18n": "^2.0.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/underscore": "^1.11.15",
+    "axios": "^1.6.7",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "0.73.6",
     "react-native-date-picker": "^4.3.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-i18n": "^2.0.15",
@@ -36,6 +37,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.12.3",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-qrcode-svg": "^6.3.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-restart": "^0.0.27",
@@ -44,9 +46,11 @@
     "react-native-screens": "^3.29.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.1.0",
     "react-native-url": "^0.0.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4",
+    "react-native-worklets-core": "^0.3.0",
     "react-redux": "^9.1.0",
     "undercore": "^1.0.0",
     "underscore": "^1.13.6",
