--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/storage": "^18.9.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
@@ -35,6 +36,7 @@
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-qrcode-svg": "^6.3.0",
@@ -47,6 +49,7 @@
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.1.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-url": "^0.0.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4",
