--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
