--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^18.9.0",
     "@react-native-firebase/auth": "^18.7.3",
     "@react-native-firebase/firestore": "^18.7.3",
+    "@react-native-firebase/messaging": "^19.1.1",
     "@react-native-firebase/storage": "^18.9.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -25,11 +26,13 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/underscore": "^1.11.15",
     "axios": "^1.6.7",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.3.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-i18n": "^2.0.15",
@@ -39,7 +42,9 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.6.1",
