--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/underscore": "^1.11.15",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
@@ -55,6 +56,7 @@
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url": "^0.0.2",
     "react-native-vector-icons": "^10.0.3",
