--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-app-auth": "^7.1.3",
     "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.3.6",
     "react-native-gesture-handler": "^2.15.0",
