--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.73.6",
     "react-native-app-auth": "^7.1.3",
     "react-native-camera": "^4.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.3.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-i18n": "^2.0.15",
