--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 apply plugin: 'com.google.gms.google-services'
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -98,6 +99,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            resValue  "string", "CodePushDeploymentKey", '""' // In debug
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -105,6 +107,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            resValue "string", "CodePushDeploymentKey", 'sbpO59YNAeqIthQeRdAF3mLmgnw3b1w4jPb6I' // In release
         }
     }
 }
